recorded demo revert changes

--- a/public/index.html
+++ b/public/index.html
@@ -124,7 +124,7 @@
     <!-- TEXT COLUMNS -->
     <div class="container">
         <div class="column">
-            <h2>HELLO WORLD</h2>
+            <h2>DATABASES</h2>
             <p>This is some example text about databases. This is some example text about databases. This is some example text about databases.</p><br>
             <p>This is some example text about databases. This is some example text about databases. This is some example text about databases.</p><br>
         </div>
